# paddex

./: .gitignore  CHANGELOG  LICENSE  Makefile  README.md  config.py  config.toml  generate  highlight.py  install_tools.sh  paddex  server
bitch/: smu  source
md_files/: 404.md  about.md  bitch.md  gaza.md  index.md
md_files/tools/: index.md  panime.md  pino_rs.md  walrs.md
pages/: .html  404.html  about.html  bitch.html  gaza.html  index.html  shit.html
pages/tools/: index.html  pino_rs.html
src/: layout.html
src/md/: index.md
static/: style.css
static/css/: output.css  style.css
static/src/: sitemap.xml
templates/: layout.html
tools/: Cargo.toml  quark  smu  webpeek.py
tools/src/: md-to-html.rs  template-renderer.rs  utils.rs
